Change Log

202012 toofishes
- various code size optimizations for a smaller binary
- recode energy meter usage calculation for better accuracy using integer math
- remove Time.h and Time.cpp libraries, not needed as we track time in other ways
- remove SERIALCLI, it hasn't been maintained in years and is replaced by RAPI

20201001 SCL
- move MV_FOR_xx from EnergyMeter.h to openevse.h, and outside of KWH_RECORDING
	to fix compile error when KWH_RECORDING not defined

20200816 SCL V7.0.2
- get rid of LoadThresholds()/g_DefaultThreshData to save space
  -> fixes a bug that crept in to DoPost() when I changed hardcoded value to 
	    if (reading >= m_ThreshData.m_ThreshAB) {
	-> was testing against m_ThreshData before initializing it, so the code was executing, even when an EV connected
- fix compiler warning in SetupMenu::Select()
	
20200507 SCL V7.0.1
- added $SV
	
20200507 SCL V7.0.0
changes 20200411 merged from oev6 branch
- added OpenEVSE V6 support
  - detection by looking for PD7 LOW
  - RELAY_PWM - close relay w/ DC and the switch to PWM for hold
  - if not V6 hardware detected same behavior as before on charging pin
- added $SC M to set max hardware current capacity. Can be written only once
N.B. AUTODETECT OF PRE-V6 HARDWARE IS CURRENTLY BROKEN PENDING NEW SPIN OF V6

D6.3.0 2020420 SCL
- merge $SC M code from oev6 branch
- merge PR#120
	
20200330 SCL
- fixed SetAmmeterDirty(1) compile error
	
D6.2.1 20200327 SCL
- doPost() - don't compare against hardcoded 900 .. use ThreshAB
- send $AT during sleep if EV connect/disconnect
	
D6.2.0 20200327 SCL
- fix 1 sec delay in showing current when charging starts
- make space by taking stuff out of button menu that is still accessible via WiFi NOSETUP_MENU
- add RAPI $FF B to enable/disable front button
- fix bug in $AT.. was supposed to send GetCurrentCapacity(), not GetMaxCurrentCapacity()
- change $GC .. new 4th returned parameter is max current capacity
- bump RAPIVER to 5.1.0.